[package]
name = "flat_map"
version = "0.0.4"
authors = [
    "Jason Toffaletti <toffaletti@gmail.com>",
    "Michael Dilger <mike@optcomp.nz>",
]
description = "A compact map stored as a vector of key, value pairs."
license = "Apache-2.0"
repository = "https://github.com/toffaletti/flat_map.git"
readme = "README.md"

include = [
    "src/*.rs",
    "test/*.rs",
    "Cargo.toml",
    "README.md",
]

[lib]
name = "flat_map"
doctest = false

[features]
std = []
default = ["std"]
std_serde = ["std", "serde/std", "serde_derive"]
no_std_serde = ["serde/collections", "serde_derive"]

[dependencies]
serde = { version = "0.9", default-features = false, optional = true }
serde_derive = { version = "0.9", optional = true }

[dev-dependencies]
serde_json = { version = "0.9"}
