[package]
name = "flat_map"
version = "0.0.5"
authors = [
    "Jason Toffaletti <toffaletti@gmail.com>",
    "Michael Dilger <mike@optcomp.nz>",
]
description = "A compact map stored as a vector of key, value pairs."
license = "Apache-2.0"
repository = "https://github.com/toffaletti/flat_map.git"
readme = "README.md"

include = [
    "src/*.rs",
    "test/*.rs",
    "Cargo.toml",
    "README.md",
]

[lib]
name = "flat_map"
doctest = false

[dependencies]
serde = { version = "1.0", default-features = false, optional = true }
serde_derive = { version = "1.0", optional = true }

[features]
std = []
default = ["std"]
serde1 = ["serde/alloc", "serde_derive"]

[dev-dependencies]
serde_json = { version = "1.0"}
